# libiceblock

./: CMakeLists.txt  README.md  TODO  libiceblock.3  libiceblock.pc.cmakein  libkwp71.3  libkwp71.pc.cmakein
src/: Bilstein.cpp  Bilstein.h  BlockExchangeProtocol.cpp  BlockExchangeProtocol.h  Fiat9141.cpp  Fiat9141.h  FixedLengthBlockProtocol.cpp  FixedLengthBlockProtocol.h  KWP71.cpp  KWP71.h  Marelli1AF.cpp  Marelli1AF.h  VariableLengthBlockProtocol.cpp  VariableLengthBlockProtocol.h  bilsteinread.cpp  fiat9141read.cpp  ftdi-test  ftdi-test.cpp  ftdi_enumerator.cpp  ftdi_enumerator.h  iceblock_version.h.in  kwp71.cpp  kwp71.h  kwp71_internal.h  kwp71_version.h.in  kwp71interface.cpp  kwp71interface.h  kwp71read.c  kwp71read.cpp  library_info.cpp  library_info.h  marelli1afread.cpp  notes.txt  protocol.c  setup.c  test  test.cpp
src/test_utils/: kwp71read.cpp
